--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-sanitizer": "^1.0.2",
     "method-override": "^2.3.10",
     "path": "^0.12.7",
     "pg": "^7.3.0"
